--- a/pagadurias/templates/components/card_document_check.html
+++ b/pagadurias/templates/components/card_document_check.html
@@ -6,7 +6,7 @@
     id="{{ id }}"
     data-file="{{ file }}"
     data-name="{{ name }}"
-    class="btn-ver-pdf mt-1 bg-[#38407a] text-white font-semibold rounded-lg px-3 py-1 hover:bg-[#2f3769] hover:shadow cursor-pointer transition"
+    class="btn-ver-pdf mt-1 bg-[#2f3769] text-white font-semibold rounded-lg px-3 py-1 hover:bg-[#2f3769] hover:shadow cursor-pointer transition"
   >
     🔍 {{ value }}
   </p>
